[package]
name = "debil-derive"
version = "0.2.1"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/myuon/debil"
description = "Provides derive macros for debil"
readme = "README.md"
keywords = ["database"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
