[package]
name = "debil"
version = "0.4.2"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/debil"
description = "Lightweight ORM for Rust"
repository = "https://github.com/myuon/debil"
readme = "README.md"
keywords = ["database"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debil-derive = { path = "../debil-derive", version = "0.2.1" }
async-trait = "0.1.17"
