[package]
name = "debil"
version = "0.5.0"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/debil"
description = "Lightweight ORM for Rust"
repository = "https://github.com/myuon/debil"
readme = "README.md"
keywords = ["database"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debil-derive = { path = "../debil-derive", version = "0.2.1" }
anyhow = "1.0.49"
async-trait = "0.1.17"
rusqlite = { version = "0.27.0", optional = true }
mysql_async = { version = "0.29.0", optional = true }
futures = { version = "0.3.1", optional = true }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = "0.5.13"

[features]
sqlite = ["rusqlite"]
mysql = ["mysql_async", "futures"]

[dev-dependencies]
sqlx = { version = "0.5.13", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
